--- a/extra.html
+++ b/extra.html
@@ -494,3 +494,30 @@
       
             </div>
           </section><!-- End Gallery Section -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+          <td><a  href="user_del.php?DelId='.$patient_data['id'].'" class="badge bg-success user_delete">approved</a></td>
+                          <td><a  href="user_del.php?DelId='.$patient_data['id'].'" class="badge bg-danger user_delete">reject</a></td>
